spacing fix

--- a/src/StudySauce/Bundle/Resources/public/css/groups.css
+++ b/src/StudySauce/Bundle/Resources/public/css/groups.css
@@ -49,6 +49,15 @@
 .group-edit .highlighted-link.ss_group
 {
     margin: 50px 0;
+    clear:both;
+}
+
+.group-edit .ss_group-row:before {
+    content: " ";
+    display: inline-block;
+    padding-bottom: 10%;
+    position: static;
+    float: left;
 }
 
 .group-edit .pack-row {
